feat: upgrade samples with instant tab

--- a/graph-toolkit-contact-exporter/appPackage/manifest.json
+++ b/graph-toolkit-contact-exporter/appPackage/manifest.json
@@ -25,24 +25,16 @@
     "accentColor": "#FFFFFF",
     "bots": [],
     "composeExtensions": [],
-    "configurableTabs": [
-        {
-            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
-            "canUpdateConfiguration": true,
-            "scopes": [
-                "team",
-                "groupchat"
-            ]
-        }
-    ],
     "staticTabs": [
         {
             "entityId": "index",
-            "name": "Personal Tab",
+            "name": "My Tab",
             "contentUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "scopes": [
-                "personal"
+                "personal",
+                "team",
+                "groupChat"
             ]
         }
     ],
