--- a/live-share-dice-roller/appPackage/manifest.json
+++ b/live-share-dice-roller/appPackage/manifest.json
@@ -24,12 +24,13 @@
         "color": "color.png"
     },
     "accentColor": "#FFFFFF",
-    "configurableTabs": [
+    "staticTabs": [
         {
-            "configurationUrl": "${{BOT_ENDPOINT}}/?view=config&inTeams=1&load=1",
-            "canUpdateConfiguration": false,
+            "entityId": "index0",
+            "name": "My Tab",
+            "contentUrl": "${{BOT_ENDPOINT}}/?view=config&inTeams=1&load=1",
             "scopes": [
-                "groupchat"
+                "groupChat"
             ],
             "context": [
                 "meetingSidePanel",
