--- a/todo-list-SPFx/appPackage/manifest.local.json
+++ b/todo-list-SPFx/appPackage/manifest.local.json
@@ -23,10 +23,12 @@
         "outline": "outline.png"
     },
     "accentColor": "#004578",
-    "configurableTabs": [
+    "staticTabs": [
         {
-            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/TeamsWorkBench.aspx%3FcomponentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26openPropertyPane=true%26teams%26forceLocale={locale}%26loadSPFX%3Dtrue%26debugManifestsFile%3Dhttps%3A%2F%2Flocalhost%3A4321%2Ftemp%2Fmanifests.js",
-            "canUpdateConfiguration": true,
+            "entityId": "index",
+            "name": "My Tab",
+            "contentUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/TeamsWorkBench.aspx%3FcomponentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26openPropertyPane=true%26teams%26forceLocale={locale}%26loadSPFX%3Dtrue%26debugManifestsFile%3Dhttps%3A%2F%2Flocalhost%3A4321%2Ftemp%2Fmanifests.js",
+            "websiteUrl": "https://products.office.com/en-us/sharepoint/collaboration",
             "scopes": [
                 "team"
             ]
