--- a/todo-list-with-Azure-backend/appPackage/manifest.json
+++ b/todo-list-with-Azure-backend/appPackage/manifest.json
@@ -25,13 +25,15 @@
     "accentColor": "#FFFFFF",
     "bots": [],
     "composeExtensions": [],
-    "configurableTabs": [
+    "staticTabs": [
         {
-            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
-            "canUpdateConfiguration": true,
+            "entityId": "index0",
+            "name": "Todo List",
+            "contentUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
+            "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "scopes": [
                 "team",
-                "groupchat"
+                "groupChat"
             ]
         }
     ],
