--- a/hello-world-tab-codespaces/env/.env.local
+++ b/hello-world-tab-codespaces/env/.env.local
@@ -5,11 +5,13 @@ TEAMSFX_ENV=local
 APP_NAME_SUFFIX=local
 
 # Generated during provision, you can also add your own variables.
-TAB_DOMAIN=
-TAB_ENDPOINT=
-TEAMS_APP_ID=
+TAB_DOMAIN=fictional-guide-97wx96w6647cp6j7-53000.app.github.dev
+TAB_ENDPOINT=https://fictional-guide-97wx96w6647cp6j7-53000.app.github.dev
+TEAMS_APP_ID=4c1c535c-1c6f-470d-9763-420fb1f00311
 TEAMS_APP_PACKAGE_PATH=
 
 # Generated during deploy, you can also add your own variables.
-SSL_CRT_FILE=
-SSL_KEY_FILE=
+SSL_CRT_FILE=/home/node/.fx/certificate/localhost.crt
+SSL_KEY_FILE=/home/node/.fx/certificate/localhost.key
+
+TEAMS_APP_TENANT_ID=a02fe319-ab95-48e5-87ac-7b29641bc008
