--- a/hello-world-tab-codespaces/teamsapp.yml
+++ b/hello-world-tab-codespaces/teamsapp.yml
@@ -116,3 +116,4 @@ publish:
     writeToEnvironmentFile:
       # Write the information of created resources into environment file for the specified environment variable(s).
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: 32d0b7b3-6523-458f-b0d7-5b59290569a3
